# printit

./: .gitignore  README.md  REFACTORING_SUMMARY.md  config.py  config.toml  config_manager.py  device_handler.py  flake.nix  image_utils.py  job_queue.py  logging_config.py  printer_utils.py  printit.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
tabs/: cat.py  dog.py  faq.py  history.py  label.py  sticker.py  sticker_pro.py  text2image.py  webcam.py
